Implement unified access pattern with nginx reverse proxy
- Move Onyx from core/ to abs-ai-hub/apps/onyx/
- Add nginx reverse proxy to Hub UI for path-based routing
- Update Hub UI assets with new routing links (/onyx/, /openwebui/, etc.)
- Remove Onyx from core.yml (now managed as app)
- Add Open WebUI as first additional app
- Create comprehensive documentation (README.md, MIGRATION guide)
- Fix Onyx wait script issues and simplify docker-compose
- Test unified access: http://localhost:3000/onyx/ working

Architecture: Single entry point (port 3000) with path-based routing to all applications

--- a/abs-ai-hub/hub-ui/assets/index.html
+++ b/abs-ai-hub/hub-ui/assets/index.html
@@ -1447,7 +1447,17 @@
                     <span class="model-badge llm">Multi-Model</span>
                     <span class="model-badge embed">RAG Engine</span>
                 </div>
-                <a href="http://localhost:8000" class="app-link" target="_blank">Open Onyx Chat</a>
+                <a href="/onyx/" class="app-link">Open Onyx Chat</a>
+            </div>
+
+            <div class="app-card">
+                <h3>🌐 Open WebUI</h3>
+                <p>Advanced alternative chat interface with multi-model support, document attachments, and conversation management. Feature-rich UI for power users.</p>
+                <div class="app-models">
+                    <span class="model-badge llm">Multi-Model</span>
+                    <span class="model-badge embed">RAG Support</span>
+                </div>
+                <a href="/openwebui/" class="app-link">Open WebUI</a>
             </div>
 
             <div class="app-card">
@@ -1457,7 +1467,7 @@
                     <span class="model-badge llm">Llama3.2:7b</span>
                     <span class="model-badge embed">Legal-BERT</span>
                 </div>
-                <a href="http://localhost:7860" class="app-link" target="_blank">Open Contract Reviewer</a>
+                <a href="/contract/" class="app-link">Open Contract Reviewer</a>
             </div>
 
             <div class="app-card">
@@ -1467,16 +1477,7 @@
                     <span class="model-badge llm">Llama3.2:3b</span>
                     <span class="model-badge embed">BGE Small</span>
                 </div>
-                <a href="http://localhost:8080" class="app-link" target="_blank">Open RAG PDF Voice</a>
-            </div>
-
-            <div class="app-card">
-                <h3>🎙️ Whisper Server</h3>
-                <p>Standalone speech-to-text transcription service. Convert audio files to text with high accuracy.</p>
-                <div class="app-models">
-                    <span class="model-badge whisper">Whisper</span>
-                </div>
-                <a href="http://localhost:8001" class="app-link" target="_blank">Open Whisper Server</a>
+                <a href="/rag/" class="app-link">Open RAG PDF Voice</a>
             </div>
         </div>
         </div>
