Switch to dedicated ports architecture (Option B)
- Removed complex reverse proxy configuration
- Each app now runs on its own dedicated port:
  * Hub UI: http://localhost:3000/
  * Open WebUI: http://localhost:3200/ (moved from 8080)
  * Contract Reviewer: http://localhost:7860/
  * Onyx AI Assistant: http://localhost:8000/
- Updated Hub UI links to point to dedicated ports
- Simplified nginx configuration to serve only Hub UI
- Eliminates MIME type issues and subpath complications
- Each app runs as intended without proxy interference

This approach is much cleaner and avoids all the reverse proxy
complexities that were causing static asset loading issues.

--- a/abs-ai-hub/hub-ui/assets/index.html
+++ b/abs-ai-hub/hub-ui/assets/index.html
@@ -1447,7 +1447,7 @@
                     <span class="model-badge llm">Multi-Model</span>
                     <span class="model-badge embed">RAG Engine</span>
                 </div>
-                <a href="/onyx/" class="app-link">Open Onyx Chat</a>
+                <a href="http://localhost:8000/" class="app-link" target="_blank">Open Onyx Chat</a>
             </div>
 
             <div class="app-card">
@@ -1457,7 +1457,7 @@
                     <span class="model-badge llm">Multi-Model</span>
                     <span class="model-badge embed">RAG Support</span>
                 </div>
-                <a href="/openwebui/" class="app-link">Open WebUI</a>
+                <a href="http://localhost:3200/" class="app-link" target="_blank">Open WebUI</a>
             </div>
 
             <div class="app-card">
@@ -1467,7 +1467,7 @@
                     <span class="model-badge llm">Llama3.2:7b</span>
                     <span class="model-badge embed">Legal-BERT</span>
                 </div>
-                <a href="/contract/" class="app-link">Open Contract Reviewer</a>
+                <a href="http://localhost:7860/" class="app-link" target="_blank">Open Contract Reviewer</a>
             </div>
 
             <div class="app-card">
