UI: readable model status + correct llama3:8b selector; Gateway: rebuilt & running with /admin/models; Onyx switched to Gateway for model discovery/pulls

--- a/abs-ai-hub/hub-ui/assets/index.html
+++ b/abs-ai-hub/hub-ui/assets/index.html
@@ -1407,15 +1407,15 @@
                     <div class="model-list" id="llm-models">
                         <div class="model-item">
                             <span class="model-name">Llama3.2:3b</span>
-                            <span class="model-status" data-model="llama3.2:3b">Checking...</span>
+                            <span class="model-status unavailable" data-model="llama3.2:3b">Checking...</span>
                         </div>
                         <div class="model-item">
                             <span class="model-name">Llama3.2:7b</span>
-                            <span class="model-status" data-model="llama3.2:latest">Checking...</span>
+                            <span class="model-status unavailable" data-model="llama3.2:latest">Checking...</span>
                         </div>
                         <div class="model-item">
                             <span class="model-name">Llama3:8b</span>
-                            <span class="model-status" data-model="llama3-8b-instruct">Checking...</span>
+                            <span class="model-status unavailable" data-model="llama3:8b">Checking...</span>
                         </div>
                     </div>
                 </div>
