Add asset management UI with section-based organization
- Create manage.html with full CRUD operations for catalog assets
- Add collapsible sections grouped by asset type (Apps, Services, Tools, etc.)
- Implement asset creation, editing, lifecycle management, and deletion
- Add visual icons, counts, and smooth animations for sections
- Update Dockerfile to include catalog.json in gateway container
- Add management links to main hub UI
- Support policy enforcement for allowed models/embeddings per asset

--- a/abs-ai-hub/hub-ui/assets/index.html
+++ b/abs-ai-hub/hub-ui/assets/index.html
@@ -1287,6 +1287,10 @@
             <h1>🤖 ABS AI Hub</h1>
             <p>Legal Workstation</p>
             <p>AI-powered legal tools and document analysis</p>
+            <div style="margin-top: 20px;">
+                <a href="manage.html" class="btn" style="margin-right: 10px;">Manage Assets</a>
+                <a href="http://localhost:8081/catalog" target="_blank" class="btn btn-secondary">View Catalog API</a>
+            </div>
         </div>
 
         <!-- Navigation Tabs -->
